--- a/webinterface.XWMM/movies/moviegenre.html
+++ b/webinterface.XWMM/movies/moviegenre.html
@@ -3,7 +3,7 @@
 	<title>XWMM Movies Management</title>
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/ext-all.css" />
 	<link rel="stylesheet" type="text/css" href="../extjs/resources/css/xtheme-darkgray.css" />
-    <link rel="stylesheet" type="text/css" href="../silk.css" />
+    <link rel="stylesheet" type="text/css" href="../css/silk.css" />
 	<link rel="stylesheet" type="text/css" href="data-view.css" />
 	<script type="text/javascript" src="../extjs/adapter/ext/ext-base.js"></script>
 	<script type="text/javascript" src="../extjs/ext-all.js"></script>
