--- a/webinterface.XWMM/movies/index.html
+++ b/webinterface.XWMM/movies/index.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="../ux/ext-basex.js"></script>
 	<script type="text/javascript" src="../ux/RowEditor.js"></script>
 	<script type="text/javascript" src="../ux/DataView-more.js"></script>
+	<script type="text/javascript" src="../ux/FileUploadField.js"></script>
 	<script type="text/javascript" src="../xbmc.js"></script>
 	<script type="text/javascript" src="../global.js"></script>
 	<script type="text/javascript" src="../export.js"></script>
