--- a/webinterface.awxi/index.html
+++ b/webinterface.awxi/index.html
@@ -18,6 +18,7 @@
 	<script src="js/lang/lang.fr.js" type="text/javascript"></script>
 	<script src="js/lang/lang.pl.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/lib.xbmc.js" type="text/javascript"></script>
+	<script src="js/ui.views.js" type="text/javascript"></script>
 	<script src="js/jquery.awx.js" type="text/javascript"></script>
 	<script src="js/awx.js" type="text/javascript"></script>
 	<script type="text/javascript">
