--- a/webinterface.awxi/index.html
+++ b/webinterface.awxi/index.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>AWX</title>
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" type="text/css" href="css/layout.css" />
 	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
@@ -22,6 +23,7 @@
 	<script src="js/ui.views.js" type="text/javascript"></script>
 	<script src="js/jquery.awx.js" type="text/javascript"></script>
 	<script src="js/awx.js" type="text/javascript"></script>
+	<script src="js/jQueryRotateCompressed.2.2.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 			awx.init();
