[webinterface.home-row] updated to 1.5.6

--- a/webinterface.home-row/index.html
+++ b/webinterface.home-row/index.html
@@ -36,10 +36,10 @@
                     </ul>
                     <h3>Hot Keys</h3>
                     <ul>
-                        <li>shift+Enter/right click - Default Item Option</li>
-                        <li>ctrl+shift+Q - Queue and Play</li>
-                        <li>ctrl+Q - Queue</li>
-                        <li>ctrl+alt+C - Clean Video Library</li>
+                        <li><b>Shift+Enter/Right Click</b> - Default Item Option</li>
+                        <li><b>Ctrl+Shift+Q</b> - Queue and Play</li>
+                        <li><b>Ctrl+Q</b> - Queue</li>
+                        <li><b>Ctrl+Alt+C</b> - Clean Video Library</li>
                     </ul>
                 </div>
             </li>
@@ -48,10 +48,10 @@
             <ul class="results">
             </ul>
         </div>
+        <div class="status">
+            <a class="status button">Waiting</a>
+        </div>
         <div class="status-bar">
-            <div class="status">
-                <a class="status button">Waiting</a>
-            </div>
             <div class="tools">
                 <div class="emulator hide">
                     <a class="kb-emulator button">Keyboard Emulator</a>
