--- a/webinterface.awxi/index.html
+++ b/webinterface.awxi/index.html
@@ -14,13 +14,15 @@
   <script src="js/jquery.hotkeys.js" type="text/javascript"></script>
   <script src="js/jquery.class.js" type="text/javascript"></script>
   <script src="js/jquery.mkf.js" type="text/javascript"></script>
-
+  <script src="js/addons.js" type="text/javascript"></script>
   <script src="js/lib.xbmc.js" type="text/javascript"></script>
   <script src="js/ui.views.js" type="text/javascript"></script>
   <script src="js/jquery.awx.js" type="text/javascript"></script>
   <script src="js/awx.js" type="text/javascript"></script>
   <script src="js/jQueryRotateCompressed.2.2.js" type="text/javascript"></script>
   <script src="js/jed.js" type="text/javascript"></script>
+  <script src="js/lrc.js" type="text/javascript"></script>
+  <script src="js/jquery.scrollto.min.js" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function() {
       awx.init();
