--- a/webinterface.chorus/tpl/ShellView.html
+++ b/webinterface.chorus/tpl/ShellView.html
@@ -3,9 +3,9 @@
     <nav class="mainnav">
         <ul>
             <li class="nav-artists"><a href="#artists" title="Artists"><i class="fa fa-microphone"></i></a></li>
-            <li class="nav-albums"><a href="#albums" title="Albums"><i class="fa fa-th-large"></i></a></li>
-            <li class="nav-movies"><a href="#movies/page/0" title="Movies"><i class="fa fa-film"></i></a></li>
-            <li class="nav-tvshows"><a href="#tvshows" title="TVShows"><i class="fa fa-desktop"></i></a></li>
+            <li class="nav-music"><a href="#mymusic" title="Music"><i class="fa fa-music"></i></a></li>
+            <li class="nav-movies"><a href="#mymovies" title="Movies"><i class="fa fa-film"></i></a></li>
+            <li class="nav-tvshows"><a href="#mytv" title="TVShows"><i class="fa fa-desktop"></i></a></li>
             <li class="nav-thumbsup"><a href="#thumbsup" title="Thumbed Up"><i class="fa fa-thumbs-up"></i></a></li>
             <li class="nav-files"><a href="#files" title="Files"><i class="fa fa-align-justify"></i></a></li>
 
@@ -91,6 +91,7 @@
                     <li><a href="#" class="about-dialog">About Chorus</a></li>
                     <li><a href="#xbmc/home">The Lab</a></li>
                     <li><a href="#scan/audio">Audio Library Scan</a></li>
+                    <li><a href="#scan/video">Video Library Scan</a></li>
                     <li><a href="#home" class="browser-view-local">Local Browser Player</a></li>
                 </ul>
             </div>
@@ -149,6 +150,7 @@
             </div>
             <div class="progress-wrapper">
                 <div id="browser-progress-bar"></div>
+                <div id="browser-progress-buffer"></div>
             </div>
             <div id="browser-time">
                 <div class="time-cur">0</div>
