--- a/webinterface.chorus/tpl/MovieListItemView.html
+++ b/webinterface.chorus/tpl/MovieListItemView.html
@@ -4,7 +4,8 @@
     </a>
     <div class="actions-wrapper movie-actions-wrapper">
         <div class="actions movie-actions<%= (thumbsup ? ' thumbs-up' : '') %>" data-id="<%= movieid %>">
-            <button class="movie-thumbsup btn" title="Thumbs Up"><i class="fa fa-thumbs-up"></i></button>
+            <button class="movie-watched btn watched-btn" title="Toggle Watched"><i class="fa fa-circle"></i></button>
+            <button class="movie-thumbsup btn thumbs-up" title="Thumbs Up"><i class="fa fa-thumbs-up"></i></button>
             <button class="movie-play btn" title="Replace the playlist with this movie and start playing"><i class="fa fa-play"></i></button>
             <button class="movie-add btn" title="Add this movie to the playlist"><i class="fa fa-plus"></i></button>
             <button class="movie-menu btn" title="More movie options"><i class="fa fa-ellipsis-v"></i></button>
@@ -18,6 +19,6 @@
         <p class="item-sub-title">
             <span><%= year %></span>
         </p>
-
+        <i class="fa fa-check is-watched" title="Watched"></i>
     </div>
 </div>
