--- a/webinterface.chorus/tpl/MovieView.html
+++ b/webinterface.chorus/tpl/MovieView.html
@@ -1,8 +1,9 @@
 <div id="fanart-background"></div>
 <div id="details" class="tabbable <%= ( fanart != '' ? 'has-fanart' : '') %>">
-    <div class="video-side">
+    <div class="video-side watched-<%=watched.status%>">
         <div class="video-thumb">
-            <img src="<%= app.image.url(thumbnail) %>" />
+            <img src="<%= app.image.url(fanart) %>" class="widethumb" />
+            <img src="<%= app.image.url(thumbnail) %>" class="thumb" />
             <div class="actions-wrapper movie-actions-wrapper">
                 <div class="actions movie-actions<%= (thumbsup ? ' thumbs-up' : '') %>" data-id="<%= movieid %>">
                     <button class="movie-thumbsup btn" title="Thumbs Up"><i class="fa fa-thumbs-up"></i></button>
@@ -12,7 +13,7 @@
                 </div>
             </div>
         </div>
-
+        <div class="video-large-progress"><span style="width: <%=watched.progress%>%" class="progress-movie-<%= movieid %>"></span></div>
     </div>
     <div class="video-tab-wrapper">
 
@@ -36,6 +37,8 @@
             <div class="tab-content">
                 <div id="movie-detail" class="tab-pane active">
                     <div class="col-1">
+                        <h1 class="video-title"><%=label%></h1>
+
                         <h2><%=tagline%></h2>
 
                         <h3><%=plotoutline%></h3>
