--- a/webinterface.chorus/tpl/TvshowView.html
+++ b/webinterface.chorus/tpl/TvshowView.html
@@ -1,8 +1,11 @@
 <div id="fanart-background"></div>
-<div id="details" class="tabbable <%= ( fanart != '' ? 'has-fanart' : '') %>">
-    <div class="video-side">
+<div id="details" class="tabbable <%= ( fanart != '' ? 'has-fanart' : '') %> tvtype-<%= type %>">
+    <div class="video-side watched-<%=watched.status%>">
         <div class="video-thumb">
-            <img src="<%= app.image.url(thumbnail) %>" />
+            <% if(widethumb != ''){ %>
+              <img src="<%= app.image.url(widethumb) %>" class="widethumb" />
+            <% } %>
+            <img src="<%= app.image.url(thumbnail) %>" class="thumb" />
             <div class="actions-wrapper tvshow-actions-wrapper">
                 <div class="actions tvshow-actions<%= (thumbsup ? ' thumbs-up' : '') %>" data-id="<%= tvshowid %>">
                     <button class="tvshow-thumbsup btn" title="Thumbs Up"><i class="fa fa-thumbs-up"></i></button>
@@ -12,7 +15,9 @@
                 </div>
             </div>
         </div>
-
+        <% if(type == 'episode'){ %>
+            <div class="video-large-progress"><span style="width: <%=watched.progress%>%" class="progress-episode-<%= episodeid %>"></span></div>
+        <% } %>
     </div>
     <div class="video-tab-wrapper">
 
@@ -35,6 +40,7 @@
             </div>
 
             <div class="tab-content">
+                <h1 class="video-title tv-title"><%=label%></h1>
 
                 <div id="tv-season" class="tab-pane active">
                     <div class="buttons">
