[webinterface.arch] updated to version 1.2.2

--- a/webinterface.arch/index.html
+++ b/webinterface.arch/index.html
@@ -44,5 +44,6 @@
       <div ng-include src="'modules/now/playing.tpl.html'" ng-controller="NowPlayingCtrl"
            class="playing"></div>
     </section>
+    <div ng-include src="'modules/donation/form.tpl.html'" ng-controller="DonationFormCtrl"></div>
   </body>
 </html>
