--- a/webinterface.tex/index.html
+++ b/webinterface.tex/index.html
@@ -4,14 +4,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-
-  <link rel="icon" href="/icon.png" type="image/png">
+  
+  <link rel="icon" href="/resources/icon.png" type="image/png">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 
-  <style>/*!
- * Font Awesome Free 5.15.3 by @fontawesome - https://fontawesome.com
- * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
- */</style><link href="assets/fontawesome/css/all.min.css" rel="stylesheet" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="assets/fontawesome/css/all.min.css"></noscript>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#f59e0b">
 <style>/* You can add global styles to this file, and also import other style files */
@@ -75,7 +71,7 @@ Improve consistency of default fonts in all browsers. (https://github.com/sindre
 
 body {
   font-family: system-ui,
-		-apple-system,
+		-apple-system, 
 		'Segoe UI',
 		Roboto,
 		Helvetica,
@@ -393,10 +389,10 @@ body {
 body::-webkit-scrollbar {
   width: 0px;
   background: transparent;
-}</style><link rel="stylesheet" href="styles.ad32425882febfa47131.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.ad32425882febfa47131.css"></noscript></head>
+}</style><link rel="stylesheet" href="styles.5067bfea48d3dfb04fb7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5067bfea48d3dfb04fb7.css"></noscript></head>
 <body class="bg-dark-full scrollbar-thin scrollbar-track-transparent scrollbar-thumb-gray-400">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.d6247b71bc301b068a43.js" defer></script><script src="polyfills.15fae42815724cc82a78.js" defer></script><script src="main.40cecf6c18f963230081.js" defer></script>
+<script src="runtime.d6247b71bc301b068a43.js" defer></script><script src="polyfills.15fae42815724cc82a78.js" defer></script><script src="main.8afca492f0d29df99774.js" defer></script>
 
 </body></html>
